--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 spring.application.name=Product
+
+# PostgreSQL Configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/ProductPozetka
+spring.datasource.username=postgres
+spring.datasource.password=19111993
+
+# JPA
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+jwt.secret=${JWT_SECRET:a4i8w7v2p9y5x3z1b6n0m8q4l7r2t5j3h6g9f0d8s5k2}
+jwt.expiration=86400000
+jwt.header=Authorization
+jwt.prefix=Bearer
+
+# Eureka Client
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
