--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -111,6 +117,7 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
+
 
     </dependencyManagement>
     <build>
