--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=Product
 # PostgreSQL Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/ProductPozetka
-spring.datasource.username=postgres
-spring.datasource.password=19111993
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
