--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <artifactId>dotenv-java</artifactId>
             <version>2.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.34.0</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
