--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Product
+server.port=1818
 
 # PostgreSQL Configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
