--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 
 
-jwt.secret=${JWT_SECRET:a4i8w7v2p9y5x3z1b6n0m8q4l7r2t5j3h6g9f0d8s5k2}
+jwt.secret=${JWT_SECRET}
 jwt.expiration=86400000
 jwt.header=Authorization
 jwt.prefix=Bearer
